changed all mentions of S3 bucket name to sb-gallery1

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./server/server.js",
     "build": "webpack -w",
-    "uploadImage": "node ./database/s3/s3_upload.js sb-gallery $npm_config_file",
-    "db:seed": "mysql -h 54.153.5.233 -u student < ./database/createDB.sql && node ./database/createTables.js && node ./database/seed.js"
+    "uploadImage": "node ./database/s3/s3_upload.js sb-gallery1 $npm_config_file",
+    "db:seed": "mysql -u root < ./database/createDB.sql && node ./database/createTables.js && node ./database/seed.js"
   },
   "repository": {
     "type": "git",
