--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "style-loader": "^2.0.0",
-    "supertest": "^6.1.1"
+    "supertest": "^6.1.1",
+    "webpack": "^5.17.0",
+    "webpack-cli": "^4.4.0"
   }
 }
