--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
+    "node-fetch": "^2.6.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-modal": "^3.12.1",
     "sequelize": "^6.3.5",
+    "unsplash-js": "^7.0.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
