--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "babel-loader": "^8.2.2",
+    "cloudinary": "^1.23.0",
     "css-loader": "^5.0.1",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
