--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "nodemon ./server/server.js",
     "build": "webpack -w",
     "uploadImages": "node ./database/cloudinary/uploadImages.js",
+    "create:json": "node ./database/createJSON.js",
     "db:seed": "mysql -u root < ./database/createDB.sql && node ./database/createTables.js && node ./database/seed.js",
-    "mongo:seed": "mongoimport --db images --collection images --type json --file ./database/test2.json"
+    "mongo:seed": "time mongoimport --db images --collection images --type json --file ./database/images.json"
   },
   "repository": {
     "type": "git",
