Removed mongo and csv files to fix branching

--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "start": "nodemon ./server/server.js",
     "build": "webpack -w",
     "uploadImages": "node ./database/cloudinary/uploadImages.js",
-    "create:json": "node ./database/createJSON.js",
-    "db:seed": "mysql -u root < ./database/createDB.sql && node ./database/createTables.js && node ./database/seed.js",
-    "mongo:seed": "time mongoimport --db images --collection images --type json --file ./database/images.json"
+    "db:seed": "mysql -u root < ./database/createDB.sql && node ./database/createTables.js && node ./database/seed.js"
   },
   "repository": {
     "type": "git",
