--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "css-loader": "^5.0.1",
     "csvtojson": "^2.0.10",
     "jest": "^26.6.3",
+    "jest-extended": "^0.11.5",
     "nodemon": "^2.0.6",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
